sumo/tests/duarouter/errors/network/ok/errors.duarouter
Error: The edge '0' is not known.
 Vehicle id='0'.
